--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "pure-react-carousel": "^1.28.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-jss": "^10.9.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^6.3.0",
